--- a/index.html
+++ b/index.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <title>Mixins - Cocktails</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <header class="header">
-            <img src="img/logo.png" alt="Logo" class="header__logo">
-            <form class="search">
-                <input type="text" class="search__field" placeholder="Search cocktail recipes">
-                <button class="btn search__btn">
-                    <svg class="search__icon">
-                        <use href="img/icons.svg#icon-magnifying-glass"></use>
-                    </svg>
-                    <span>Search</span>
-                </button>
-            </form>
-            <div class="likes">
-                <div class="likes__field">
-                    <svg class="likes__icon">
-                        <use href="img/icons.svg#icon-heart"></use>
-                    </svg>
-                </div>
-                <div class="likes__panel">
-                    <ul class="likes__list">
-                        
-                    </ul>
-                </div>
-            </div>
-        </header>
-
-        <div class="results">
-            <ul class="results__list"></ul>
-            <div class="results__pages">
-            </div>
+      <header class="header">
+        <img src="img/logo.png" alt="Logo" class="header__logo" />
+        <form class="search">
+          <input
+            type="text"
+            class="search__field"
+            placeholder="Search cocktail recipes"
+          />
+          <button class="btn search__btn">
+            <svg class="search__icon">
+              <use href="img/icons.svg#icon-magnifying-glass"></use>
+            </svg>
+            <span>Search</span>
+          </button>
+        </form>
+        <div class="likes">
+          <div class="likes__field">
+            <svg class="likes__icon">
+              <use href="img/icons.svg#icon-heart"></use>
+            </svg>
+          </div>
+          <div class="likes__panel">
+            <ul class="likes__list"></ul>
+          </div>
         </div>
+      </header>
 
-        <div class="recipe"></div>
+      <div class="results">
+        <ul class="results__list"></ul>
+        <div class="results__pages"></div>
+      </div>
 
-        <div class="shopping">
-            <h2 class="heading-2">My Shopping List</h2>
+      <div class="recipe"></div>
 
-            <ul class="shopping__list"></ul>
-
-            <div class="copyright">
-                &copy; by vm.dev
-                <a href="#" target="_blank" class="link">cock tails</a>.
-            </div>
-        </div>
+      <div class="shopping">
+        <h2 class="heading-2">My Shopping List</h2>
+        <ul class="shopping__list"></ul>
+      </div>
     </div>
-<script type="text/javascript" src="js/bundle.js"></script></body>
-
+  <script type="text/javascript" src="js/bundle.js"></script></body>
 </html>
